--- a/src/specification.yaml
+++ b/src/specification.yaml
@@ -28,9 +28,9 @@ paths:
       produces:
         - "application/json"
       parameters:
-        - name: "petId"
+        - name: "pictureId"
           in: "path"
-          description: "ID of pet to return"
+          description: "ID of picture to return"
           required: true
           type: "integer"
           format: "int64"
@@ -38,36 +38,36 @@ paths:
         200:
           description: "successful operation"
           schema:
-            $ref: "#/definitions/Pet"
+            $ref: "#/definitions/picture"
         400:
           description: "Invalid ID supplied"
         404:
-          description: "Pet not found"
+          description: "Picture not found"
       security:
         - api_key: []
     post:
       tags:
         - "photo"
-      summary: "Add a new pet to the store"
+      summary: "Add a new picture to the store"
       description: ""
-      operationId: "addPet"
+      operationId: "addpicture"
       consumes:
         - "application/json"
-        - "application/xml"
       produces:
-        - "application/xml"
         - "application/json"
       parameters:
         - in: "body"
           name: "body"
-          description: "Pet object that needs to be added to the store"
+          description: "picture object that needs to be added to the store"
           required: true
           schema:
-            $ref: "#/definitions/Pet"
+            $ref: "#/definitions/picture"
       responses:
+        200:
+          description: "successful operation"
         405:
           description: "Invalid input"
       security:
-        - petstore_auth:
-            - "write:pets"
-            - "read:pets"
+        - picturestore_auth:
+            - "write:pictures"
+            - "read:pictures"
